--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/visit_once
+# spring.datasource.url=jdbc:postgresql://db:5432/visit_once
 spring.datasource.username=ilari
 spring.datasource.password=ilari
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
